# ZoteBot

./: .gitignore  README.md  pyproject.toml
src/: Zote.py  auth.py  config.py  precept.yaml  save.py
